커밋 경고 수정